# seccamp

./: .gitignore  LICENSE  README.md
TFHE/: .gitignore  CMakeLists.txt  a.out  error.txt  params.hpp  tlwe.cpp  tlwemain.cpp
TFHE/INCLUDE/: common.hpp  key.hpp  params.hpp  tfhe++.hpp  tlwe.hpp
TFHE/RANDEN/: CMakeLists.txt  randen.cc  randen.h
TFHE/SPQLIOS/: CMakeLists.txt  Makefile.old  fft_processor_spqlios.cpp  spqlios-bench.cpp  spqlios-fft-impl.cpp  spqlios-fft-unaligned.s  spqlios-ifft-avx.s  spqlios-ifft-fma.s  spqlios-ifft-unaligned.s  spqlios-model.cpp  todo.sh
TFHE/b/: CMakeCache.txt  Makefile  cmake_install.cmake
TFHE/b/RANDEN/: Makefile
TFHE/b/SPQLIOS/: Makefile  cmake_install.cmake
TFHE/b/src/: Makefile
TFHE/b/test/: Makefile  blind_rotate_main  cmake_install.cmake  cmux_main  external_product_main  gate_main  id_key_switch_main  tlwe_main
TFHE/error_log/: CMake_error.txt
TFHE/include/: cloudkey.hpp  common.hpp  detwfa.hpp  gate.hpp  gatebootstrapping.hpp  gatebootstrapping_tlwelvl0_to_tlwelvl1.hpp  key.hpp  keyswitch.hpp  mulfft.hpp  params.hpp  tfhe++.hpp  tlwe.hpp  trgsw.hpp  trlwe.hpp
TFHE/src/: CMakeLists.txt  cloudkey.cpp  detwfa.cpp  gate.cpp  gatebootstrapping.cpp  gatebootstrapping_tlwelvl0_to_tlwelvl1.cpp  keyswitch.cpp  tlwe.cpp  trgsw.cpp  trlwe.cpp
TFHE/test/: CMakeLists.txt  a.out  blind_rotate_main.cpp  cmux_main.cpp  external_product_main.cpp  gate_main.cpp  id_key_switch_main.cpp  tlwe_main.cpp  tlwemain.cpp  trgswmain.cpp  trlwemain.cpp
